--- a/CabinetEx/CabinetEx.vcxproj.filters
+++ b/CabinetEx/CabinetEx.vcxproj.filters
@@ -177,6 +177,9 @@
     <Image Include="Resources\Bitmaps\votray.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Resources\Icons\windows.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Headers\fldrlist.h">
