--- a/explorer.vcxproj.filters
+++ b/explorer.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClInclude Include="cabinet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="deskhost.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="dlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -36,34 +33,13 @@
     <ClInclude Include="mixer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="moreprog.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="pidlbutton.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="proglist.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="rcids.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="sfthost.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="specfldr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ssomgr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="startmnu.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="taskband.h">
@@ -162,9 +138,6 @@
     <ClInclude Include="path.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="desktop2.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="qsort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -249,27 +222,55 @@
     <ClInclude Include="wtl\atlwinx.h">
       <Filter>Header Files\ATL</Filter>
     </ClInclude>
+    <ClInclude Include="desktop2\deskhost.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="desktop2\desktop2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="desktop2\moreprog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="desktop2\pidlbutton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="desktop2\proglist.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="desktop2\resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="desktop2\sfthost.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="desktop2\specfldr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="desktop2\stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="desktop2\userpane.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="explorer.rcv">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="resource.rcv">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="cpp.hint" />
     <None Include="interfacesp.inc">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="desktop2\startpane.aps" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="startpane.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
     <ResourceCompile Include="explorer.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
     <ResourceCompile Include="dlg.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+    <ResourceCompile Include="desktop2\startpane.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
@@ -444,9 +445,6 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="deskhost.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="hostutil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -456,22 +454,7 @@
     <ClCompile Include="libx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="logoff.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="mixer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="moreprog.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="proglist.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="sfthost.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="specfldr.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ssomgr.cpp">
@@ -568,6 +551,30 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pinnedlist.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="desktop2\deskhost.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="desktop2\logoff.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="desktop2\moreprog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="desktop2\proglist.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="desktop2\sfthost.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="desktop2\specfldr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="desktop2\userpane.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="desktop2\wrapctl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
