--- a/src/Explorer.vcxproj
+++ b/src/Explorer.vcxproj
@@ -30,7 +30,7 @@
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>AtlProj</Keyword>
     <ProjectGuid>{244f63ed-b552-44f6-89ce-5f9e741ceb70}</ProjectGuid>
-    <RootNamespace>explorer</RootNamespace>
+    <RootNamespace>Explorer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -452,30 +452,30 @@ del "$(IntermediateOutputPath)temp.res"
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="cocreateinstancehook.h" />
-    <ClInclude Include="cowsite.h" />
-    <ClInclude Include="desktop2\deskhost.h" />
-    <ClInclude Include="desktop2\desktop2.h" />
-    <ClInclude Include="desktop2\moreprog.h" />
-    <ClInclude Include="desktop2\pidlbutton.h" />
-    <ClInclude Include="desktop2\proglist.h" />
+    <ClInclude Include="CoCreateInstanceHook.h" />
+    <ClInclude Include="COWSite.h" />
+    <ClInclude Include="desktop2\DeskHost.h" />
+    <ClInclude Include="desktop2\Desktop2.h" />
+    <ClInclude Include="desktop2\MoreProg.h" />
+    <ClInclude Include="desktop2\PidlButton.h" />
+    <ClInclude Include="desktop2\ProgList.h" />
     <ClInclude Include="desktop2\resource.h" />
-    <ClInclude Include="desktop2\sfthost.h" />
-    <ClInclude Include="desktop2\specfldr.h" />
+    <ClInclude Include="desktop2\SFTHost.h" />
+    <ClInclude Include="desktop2\SpecFldr.h" />
     <ClInclude Include="desktop2\stdafx.h" />
-    <ClInclude Include="desktop2\userpane.h" />
+    <ClInclude Include="desktop2\UserPane.h" />
     <ClInclude Include="desktopp.h" />
-    <ClInclude Include="patternhelper.h" />
+    <ClInclude Include="PatternHelper.h" />
     <ClInclude Include="MinHook.h" />
-    <ClInclude Include="ntperf.h" />
-    <ClInclude Include="ntwmi.h" />
-    <ClInclude Include="path.h" />
-    <ClInclude Include="qsort.h" />
-    <ClInclude Include="runtask.h" />
-    <ClInclude Include="shfusion.h" />
-    <ClInclude Include="thememanager.h" />
-    <ClInclude Include="uemapp.h" />
-    <ClInclude Include="winter.h" />
+    <ClInclude Include="NtPerf.h" />
+    <ClInclude Include="NtWmi.h" />
+    <ClInclude Include="Path.h" />
+    <ClInclude Include="QSort.h" />
+    <ClInclude Include="RunTask.h" />
+    <ClInclude Include="SHFusion.h" />
+    <ClInclude Include="ThemeManager.h" />
+    <ClInclude Include="UEMApp.h" />
+    <ClInclude Include="Winter.h" />
     <ClInclude Include="wmiumkm.h" />
     <ClInclude Include="wtl\atlapp.h" />
     <ClInclude Include="wtl\atlcrack.h" />
@@ -494,39 +494,39 @@ del "$(IntermediateOutputPath)temp.res"
     <ClInclude Include="wtl\atlscrl.h" />
     <ClInclude Include="wtl\atlsplit.h" />
     <ClInclude Include="atlstuff.h" />
-    <ClInclude Include="bandsite.h" />
+    <ClInclude Include="BandSite.h" />
     <ClInclude Include="cabinet.h" />
-    <ClInclude Include="criticalsection.h" />
-    <ClInclude Include="cwndproc.h" />
+    <ClInclude Include="CriticalSection.h" />
+    <ClInclude Include="CWndProc.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="dlg.h" />
-    <ClInclude Include="dpa.h" />
-    <ClInclude Include="help.h" />
-    <ClInclude Include="hostutil.h" />
-    <ClInclude Include="ieguidp.h" />
-    <ClInclude Include="mfulist.h" />
-    <ClInclude Include="mixer.h" />
-    <ClInclude Include="port32.h" />
+    <ClInclude Include="DPA.h" />
+    <ClInclude Include="Help.h" />
+    <ClInclude Include="HostUtil.h" />
+    <ClInclude Include="IEGuidP.h" />
+    <ClInclude Include="MFUList.h" />
+    <ClInclude Include="Mixer.h" />
+    <ClInclude Include="Port32.h" />
     <ClInclude Include="rcids.h" />
-    <ClInclude Include="shdguid.h" />
-    <ClInclude Include="shguidp.h" />
-    <ClInclude Include="shundoc.h" />
-    <ClInclude Include="ssomgr.h" />
-    <ClInclude Include="startids.h" />
-    <ClInclude Include="startmnu.h" />
-    <ClInclude Include="taskband.h" />
-    <ClInclude Include="taskbar.h" />
-    <ClInclude Include="tray.h" />
-    <ClInclude Include="trayclok.h" />
-    <ClInclude Include="traycmn.h" />
-    <ClInclude Include="trayitem.h" />
-    <ClInclude Include="traynot.h" />
-    <ClInclude Include="trayp.h" />
-    <ClInclude Include="trayreg.h" />
-    <ClInclude Include="userpane.h" />
-    <ClInclude Include="util.h" />
+    <ClInclude Include="ShDGuid.h" />
+    <ClInclude Include="ShGuidP.h" />
+    <ClInclude Include="ShUndoc.h" />
+    <ClInclude Include="SSOMgr.h" />
+    <ClInclude Include="StartIds.h" />
+    <ClInclude Include="StartMnu.h" />
+    <ClInclude Include="TaskBand.h" />
+    <ClInclude Include="TaskBar.h" />
+    <ClInclude Include="Tray.h" />
+    <ClInclude Include="TrayClok.h" />
+    <ClInclude Include="TrayCmn.h" />
+    <ClInclude Include="TrayItem.h" />
+    <ClInclude Include="TrayNot.h" />
+    <ClInclude Include="TrayP.h" />
+    <ClInclude Include="TrayReg.h" />
+    <ClInclude Include="UserPane.h" />
+    <ClInclude Include="Util.h" />
     <ClInclude Include="w4warn.h" />
-    <ClInclude Include="winuserp.h" />
+    <ClInclude Include="WinUserP.h" />
     <ClInclude Include="wtl\atltheme.h" />
     <ClInclude Include="wtl\atluser.h" />
     <ClInclude Include="wtl\atlwince.h" />
@@ -534,9 +534,9 @@ del "$(IntermediateOutputPath)temp.res"
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
-    <None Include="desktop2\startpane.aps" />
-    <None Include="explorer.rcv" />
-    <None Include="interfacesp.inc" />
+    <None Include="desktop2\StartPane.aps" />
+    <None Include="Explorer.rcv" />
+    <None Include="InterfacesP.inc" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="dlg.rc">
@@ -547,7 +547,7 @@ del "$(IntermediateOutputPath)temp.res"
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='ReleaseDebug|x64'">true</ExcludedFromBuild>
     </ResourceCompile>
-    <ResourceCompile Include="explorer.rc" />
+    <ResourceCompile Include="Explorer.rc" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="resources\clasicsm.ico" />
@@ -608,48 +608,48 @@ del "$(IntermediateOutputPath)temp.res"
     <Image Include="resources\underflow.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="bandsite.cpp" />
-    <ClCompile Include="classfac.cpp" />
-    <ClCompile Include="cocreateinstancehook.cpp" />
-    <ClCompile Include="cowsite.cpp" />
-    <ClCompile Include="cwndproc.cpp" />
+    <ClCompile Include="BandSite.cpp" />
+    <ClCompile Include="ClassFac.cpp" />
+    <ClCompile Include="CoCreateInstanceHook.cpp" />
+    <ClCompile Include="COWSite.cpp" />
+    <ClCompile Include="CWndProc.cpp" />
     <ClCompile Include="debug.cpp" />
-    <ClCompile Include="defaultmfu.cpp" />
-    <ClCompile Include="desktop2\deskhost.cpp" />
-    <ClCompile Include="desktop2\logoff.cpp" />
-    <ClCompile Include="desktop2\moreprog.cpp" />
-    <ClCompile Include="desktop2\proglist.cpp" />
-    <ClCompile Include="desktop2\sfthost.cpp" />
-    <ClCompile Include="desktop2\specfldr.cpp" />
-    <ClCompile Include="desktop2\userpane.cpp" />
-    <ClCompile Include="desktop2\wrapctl.cpp" />
-    <ClCompile Include="desktopp.cpp" />
-    <ClCompile Include="dllload.cpp" />
-    <ClCompile Include="hostutil.cpp" />
-    <ClCompile Include="ieguidp.cpp" />
-    <ClCompile Include="initcab.cpp" />
+    <ClCompile Include="DefaultMfu.cpp" />
+    <ClCompile Include="desktop2\DeskHost.cpp" />
+    <ClCompile Include="desktop2\LogOff.cpp" />
+    <ClCompile Include="desktop2\MoreProg.cpp" />
+    <ClCompile Include="desktop2\ProgList.cpp" />
+    <ClCompile Include="desktop2\SFTHost.cpp" />
+    <ClCompile Include="desktop2\SpecFldr.cpp" />
+    <ClCompile Include="desktop2\UserPane.cpp" />
+    <ClCompile Include="desktop2\WrapCtl.cpp" />
+    <ClCompile Include="DesktopP.cpp" />
+    <ClCompile Include="DllLoad.cpp" />
+    <ClCompile Include="HostUtil.cpp" />
+    <ClCompile Include="IEGuidP.cpp" />
+    <ClCompile Include="InitCab.cpp" />
     <ClCompile Include="libx.cpp" />
-    <ClCompile Include="mixer.cpp" />
-    <ClCompile Include="path.cpp" />
-    <ClCompile Include="pinnedlist.cpp" />
-    <ClCompile Include="runtask.cpp" />
-    <ClCompile Include="shell32startmnu.cpp" />
-    <ClCompile Include="shfusion.cpp" />
-    <ClCompile Include="shundoc.cpp" />
-    <ClCompile Include="ssomgr.cpp" />
-    <ClCompile Include="startmnu.cpp" />
-    <ClCompile Include="taskband.cpp" />
-    <ClCompile Include="taskbar.cpp" />
-    <ClCompile Include="thememanager.cpp" />
-    <ClCompile Include="tray.cpp" />
-    <ClCompile Include="trayclok.cpp" />
-    <ClCompile Include="traycmn.cpp" />
-    <ClCompile Include="trayitem.cpp" />
-    <ClCompile Include="traynot.cpp" />
-    <ClCompile Include="trayprop.cpp" />
-    <ClCompile Include="trayreg.cpp" />
-    <ClCompile Include="uemapp.cpp" />
-    <ClCompile Include="util.cpp" />
+    <ClCompile Include="Mixer.cpp" />
+    <ClCompile Include="Path.cpp" />
+    <ClCompile Include="PinnedList.cpp" />
+    <ClCompile Include="RunTask.cpp" />
+    <ClCompile Include="Shell32StartMnu.cpp" />
+    <ClCompile Include="SHFusion.cpp" />
+    <ClCompile Include="ShUndoc.cpp" />
+    <ClCompile Include="SSOMgr.cpp" />
+    <ClCompile Include="StartMnu.cpp" />
+    <ClCompile Include="TaskBand.cpp" />
+    <ClCompile Include="TaskBar.cpp" />
+    <ClCompile Include="ThemeManager.cpp" />
+    <ClCompile Include="Tray.cpp" />
+    <ClCompile Include="TrayClok.cpp" />
+    <ClCompile Include="TrayCmn.cpp" />
+    <ClCompile Include="TrayItem.cpp" />
+    <ClCompile Include="TrayNot.cpp" />
+    <ClCompile Include="TrayProp.cpp" />
+    <ClCompile Include="TrayReg.cpp" />
+    <ClCompile Include="UEMApp.cpp" />
+    <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="WindowsShell.manifest" />
