--- a/src/Explorer.vcxproj.filters
+++ b/src/Explorer.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClInclude Include="desktop2\userpane.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="UEMApp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="explorer.rcv">
