Move DefaultMFU.cpp to Desktop2/
This was supposed to be in this folder, but I made an oversight when moving
all the files back into Desktop2 by mistake.

Signed-off-by: Isabella Lulamoon <kawapure@gmail.com>

--- a/src/Explorer.vcxproj
+++ b/src/Explorer.vcxproj
@@ -620,7 +620,7 @@ del "$(IntermediateOutputPath)temp.res"
     <ClCompile Include="COWSite.cpp" />
     <ClCompile Include="CWndProc.cpp" />
     <ClCompile Include="debug.cpp" />
-    <ClCompile Include="DefaultMFU.cpp" />
+    <ClCompile Include="desktop2\DefaultMFU.cpp" />
     <ClCompile Include="desktop2\DeskHost.cpp" />
     <ClCompile Include="desktop2\LogOff.cpp" />
     <ClCompile Include="desktop2\MoreProg.cpp" />
