Create StartButton temp

--- a/src/Explorer.vcxproj
+++ b/src/Explorer.vcxproj
@@ -479,6 +479,7 @@ del "$(IntermediateOutputPath)temp.res"
     <ClInclude Include="QSort.h" />
     <ClInclude Include="RunTask.h" />
     <ClInclude Include="SHFusion.h" />
+    <ClInclude Include="StartButton.h" />
     <ClInclude Include="ThemeManager.h" />
     <ClInclude Include="UEMApp.h" />
     <ClInclude Include="Winter.h" />
@@ -643,6 +644,7 @@ del "$(IntermediateOutputPath)temp.res"
     <ClCompile Include="SHFusion.cpp" />
     <ClCompile Include="ShUndoc.cpp" />
     <ClCompile Include="SSOMgr.cpp" />
+    <ClCompile Include="StartButton.cpp" />
     <ClCompile Include="StartMnu.cpp" />
     <ClCompile Include="TaskBand.cpp" />
     <ClCompile Include="TaskBar.cpp" />
