Bring in all Vista graphical resources
Note that Vista itself had a flaw whereby the corresponding resource to
"resources\NotificationArea\Clean_Clock_Battery_NoNetwork_NoSound.bmp"
(explorer.exe resource #215) displayed the wrong content relative to its
name. The network icon shows solely, whereas it should only show the
battery icon. I have carried over this bug from Vista.

This commit does not focus on changes to anything else, including dialogs.

Signed-off-by: Isabella Lulamoon <kawapure@gmail.com>

--- a/src/Explorer.vcxproj
+++ b/src/Explorer.vcxproj
@@ -565,7 +565,20 @@ del "$(IntermediateOutputPath)temp.res"
     <Image Include="resources\inetmail.ico" />
     <Image Include="resources\inetweb.ico" />
     <Image Include="resources\logoffbuttons.bmp" />
+    <Image Include="resources\LogoffButtonsAero.bmp" />
+    <Image Include="resources\LogoffButtonsAeroDisabled.bmp" />
+    <Image Include="resources\LogoffButtonsAeroPressed.bmp" />
+    <Image Include="resources\LogoffButtonsExpander.bmp" />
+    <Image Include="resources\LogoffButtonsExpanderLarge.bmp" />
     <Image Include="resources\logoffbuttonshot.bmp" />
+    <Image Include="resources\LogoffButtonsLarge.bmp" />
+    <Image Include="resources\LogoffButtonsLargeAero.bmp" />
+    <Image Include="resources\LogoffButtonsLargeAeroDisabled.bmp" />
+    <Image Include="resources\LogoffButtonsLargeAeroPressed.bmp" />
+    <Image Include="resources\LogoffButtonsLargePressed.bmp" />
+    <Image Include="resources\LogoffButtonsPressed.bmp" />
+    <Image Include="resources\Marketplace.ico" />
+    <Image Include="resources\Messenger.ico" />
     <Image Include="resources\mycomold.ico" />
     <Image Include="resources\mycomp.ico" />
     <Image Include="resources\naclockclean.bmp" />
@@ -573,6 +586,37 @@ del "$(IntermediateOutputPath)temp.res"
     <Image Include="resources\nanoclockclean.bmp" />
     <Image Include="nanoclocknoclean.bmp" />
     <Image Include="resources\newsm.bmp" />
+    <Image Include="resources\NoProgram.ico" />
+    <Image Include="resources\NotificationArea\Clean_Clock_Battery_Network_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_Clock_Battery_Network_Sound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_Clock_Battery_NoNetwork_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_Clock_NoBattery_Network_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_Clock_NoBattery_Network_Sound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_Clock_NoBattery_NoNetwork_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_Clock_NoBattery_NoNetwork_Sound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_NoClock_Battery_Network_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_NoClock_Battery_Network_Sound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_NoClock_Battery_NoNetwork_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_NoClock_Battery_NoNetwork_Sound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_NoClock_NoBattery_Network_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_NoClock_NoBattery_Network_Sound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_NoClock_NoBattery_NoNetwork_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\Clean_NoClock_NoBattery_NoNetwork_Sound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_Clock_Battery_Network_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_Clock_Battery_Network_Sound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_Clock_Battery_NoNetwork_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_Clock_NoBattery_Network_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_Clock_NoBattery_Network_Sound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_Clock_NoBattery_NoNetwork_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_Clock_NoBattery_NoNetwork_Sound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_NoClock_Battery_Network_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_NoClock_Battery_Network_Sound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_NoClock_Battery_NoNetwork_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_NoClock_Battery_NoNetwork_Sound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_NoClock_NoBattery_Network_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_NoClock_NoBattery_Network_Sound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_NoClock_NoBattery_NoNetwork_NoSound.bmp" />
+    <Image Include="resources\NotificationArea\NoClean_NoClock_NoBattery_NoNetwork_Sound.bmp" />
     <Image Include="resources\old_error.ico" />
     <Image Include="resources\old_info.ico" />
     <Image Include="resources\old_printer.ico" />
@@ -580,6 +624,11 @@ del "$(IntermediateOutputPath)temp.res"
     <Image Include="resources\old_warning.ico" />
     <Image Include="resources\overflow.ico" />
     <Image Include="resources\sbsbkg.bmp" />
+    <Image Include="resources\ShellBrd\ClassicSMBanner.bmp" />
+    <Image Include="resources\ShellBrd\start16.bmp" />
+    <Image Include="resources\ShellBrd\start16mask.bmp" />
+    <Image Include="resources\ShellBrd\startclassic.bmp" />
+    <Image Include="resources\ShowDesktop.ico" />
     <Image Include="resources\smwmail.ico" />
     <Image Include="resources\srvadv2.bmp" />
     <Image Include="resources\srvapp.bmp" />
@@ -593,6 +642,7 @@ del "$(IntermediateOutputPath)temp.res"
     <Image Include="resources\start16mask.bmp" />
     <Image Include="resources\startclassic.bmp" />
     <Image Include="resources\startem.bmp" />
+    <Image Include="resources\starter.bmp" />
     <Image Include="resources\stmuper.bmp" />
     <Image Include="resources\stmupr64.bmp" />
     <Image Include="resources\stmupro.bmp" />
@@ -613,6 +663,7 @@ del "$(IntermediateOutputPath)temp.res"
     <Image Include="resources\treeup.ico" />
     <Image Include="resources\tsbanner.bmp" />
     <Image Include="resources\underflow.ico" />
+    <Image Include="resources\WindowsWeb.ico" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BandSite.cpp" />
