--- a/src/desktop2/StartPane.rc
+++ b/src/desktop2/StartPane.rc
@@ -86,4 +86,15 @@ END
 
 
 IDB_LOGOFF_NORMAL BITMAP "resources\\LogoffButtons.bmp"
-IDB_LOGOFF_HOT    BITMAP "resources\\LogoffButtonsHot.bmp"
+// IDB_LOGOFF_HOT    BITMAP "resources\\LogoffButtonsHot.bmp"
+IDB_LOGOFF_PRESSED BITMAP "resources\\LogoffButtonsPressed.bmp"
+IDB_LOGOFF_EXPANDER BITMAP "resources\\LogoffButtonsExpander.bmp"
+IDB_LOGOFF_LARGE_NORMAL BITMAP "resources\\LogoffButtonsLarge.bmp"
+IDB_LOGOFF_LARGE_PRESSED BITMAP "resources\\LogoffButtonsLargePressed.bmp"
+IDB_LOGOFF_LARGE_EXPANDER BITMAP "resources\\LogoffButtonsLargeExpander.bmp"
+IDB_LOGOFF_AERO_DISABLED BITMAP "resources\\LogoffButtonsAeroDisabled.bmp"
+IDB_LOGOFF_AERO_PRESSED BITMAP "resources\\LogoffButtonsAeroPressed.bmp"
+IDB_LOGOFF_AERO_NORMAL BITMAP "resources\\LogoffButtonsAero.bmp"
+IDB_LOGOFF_LARGE_AERO_DISABLED BITMAP "resources\\LogoffButtonsLargeAeroDisabled.bmp"
+IDB_LOGOFF_LARGE_AERO_PRESSED BITMAP "resources\\LogoffButtonsLargeAeroPressed.bmp"
+IDB_LOGOFF_LARGE_AERO_NORMAL BITMAP "resources\\LogoffButtonsLargeAero.bmp"
